Add support for specifing gitlab-secrets namespace and release name
With canary, we need to have a separate gitlab-secrets release called
"gitlab-secrets-cny" which populates into the gitlab-cny namespace
instead.

--- a/releases/gitlab-secrets.yaml
+++ b/releases/gitlab-secrets.yaml
@@ -10,13 +10,14 @@ repositories:
   url: "https://kubernetes-charts-incubator.storage.googleapis.com"
 
 releases:
-- name: 'gitlab-secrets'
+- name:  {{ .Environment.Values | getOrNil "gitlab_secrets_release_name" | default "gitlab-secrets" }}
   chart: "kubernetes-incubator/raw"
-  namespace: gitlab
+  namespace: {{ .Environment.Values | getOrNil "gitlab_secrets_namespace" | default "gitlab" }}
   version: "0.2.3"
   installed: {{ env "GITLAB_SECRETS_INSTALLED" | default "true" }}
   values:
-{{- $gkms_omnibus_secrets_base64 := (exec "bash" (list "-c" (print "gsutil cat gs://gitlab-" .Environment.Name "-secrets/gitlab-omnibus-secrets/" .Environment.Name ".enc | gcloud --project " .Environment.Values.google_project " kms decrypt --location global --keyring=gitlab-secrets --key " .Environment.Name " --ciphertext-file=- --plaintext-file=-")) | b64enc | quote) }}
+{{- $gkms_source := .Environment.Values | getOrNil "gitlab_secrets_gkms_source" | default .Environment.Name }}
+{{- $gkms_omnibus_secrets_base64 := (exec "bash" (list "-c" (print "gsutil cat gs://gitlab-" $gkms_source "-secrets/gitlab-omnibus-secrets/" $gkms_source ".enc | gcloud --project " .Environment.Values.google_project " kms decrypt --location global --keyring=gitlab-secrets --key " $gkms_source " --ciphertext-file=- --plaintext-file=-")) | b64enc | quote) }}
 {{- $dev_gitlab_org_docker_pass := exec "bash" (list "-c" (print "echo " $gkms_omnibus_secrets_base64 "| base64 -d | jq -jc '.gitlab_k8s.\"k8s-workloads-deploy-token\"'")) }}
     - resources:
       - apiVersion: v1
@@ -24,7 +25,7 @@ releases:
         type: kubernetes.io/dockerconfigjson
         metadata:
           name: dev-registry-access
-          namespace: gitlab
+          namespace: {{ .Environment.Values | getOrNil "gitlab_secrets_namespace" | default "gitlab" }}
         stringData:
           .dockerconfigjson: |
             {"auths":{"dev.gitlab.org:5005":{"username":"k8s-workloads-deploy-token","password":{{ $dev_gitlab_org_docker_pass | quote }},"auth":{{ (list "k8s-workloads-deploy-token:" $dev_gitlab_org_docker_pass) | join "" | b64enc | quote }}}}}
@@ -32,7 +33,7 @@ releases:
         kind: Secret
         metadata:
           name: gitlab-object-storage
-          namespace: gitlab
+          namespace: {{ .Environment.Values | getOrNil "gitlab_secrets_namespace" | default "gitlab" }}
         stringData:
           gitlab-object-storage.yml: |
               provider: Google
@@ -43,7 +44,7 @@ releases:
         kind: Secret
         metadata:
           name: gitlab-google-oauth2
-          namespace: gitlab
+          namespace: {{ .Environment.Values | getOrNil "gitlab_secrets_namespace" | default "gitlab" }}
         stringData:
           provider:
 {{ exec "bash" (list "-c" (print "echo " $gkms_omnibus_secrets_base64 "| base64 -d | jq -jc '.\"omnibus-gitlab\".gitlab_rb.\"gitlab-rails\".omniauth_providers[0]'")) | quote | indent 14 }}
@@ -51,7 +52,7 @@ releases:
         kind: Secret
         metadata:
           name: registry-certificate
-          namespace: gitlab
+          namespace: {{ .Environment.Values | getOrNil "gitlab_secrets_namespace" | default "gitlab" }}
         stringData:
           registry-auth.crt: |
 {{ exec "bash" (list "-c" (print "echo " $gkms_omnibus_secrets_base64 "| base64 -d | jq -r '.\"omnibus-gitlab\".gitlab_rb.registry.internal_certificate'")) | indent 14 }}
@@ -61,7 +62,7 @@ releases:
         kind: Secret
         metadata:
           name: registry-storage
-          namespace: gitlab
+          namespace: {{ .Environment.Values | getOrNil "gitlab_secrets_namespace" | default "gitlab" }}
         stringData:
           config: |
             gcs:
@@ -80,49 +81,49 @@ releases:
         kind: Secret
         metadata:
           name: registry-httpsecret
-          namespace: gitlab
+          namespace: {{ .Environment.Values | getOrNil "gitlab_secrets_namespace" | default "gitlab" }}
         stringData:
           secret: {{ exec "bash" (list "-c" (print "echo " $gkms_omnibus_secrets_base64 "| base64 -d | jq -j '.\"omnibus-gitlab\".gitlab_rb.registry.http_secret'")) | quote }}
       - apiVersion: v1
         kind: Secret
         metadata:
           name: gitlab-postgres-credential
-          namespace: gitlab
+          namespace: {{ .Environment.Values | getOrNil "gitlab_secrets_namespace" | default "gitlab" }}
         stringData:
           secret: {{ exec "bash" (list "-c" (print "echo " $gkms_omnibus_secrets_base64 "| base64 -d | jq -j '.\"omnibus-gitlab\".gitlab_rb.\"gitlab-rails\".db_password'")) | quote }}
       - apiVersion: v1
         kind: Secret
         metadata:
           name: gitlab-redis-credential
-          namespace: gitlab
+          namespace: {{ .Environment.Values | getOrNil "gitlab_secrets_namespace" | default "gitlab" }}
         stringData:
           secret: {{ exec "bash" (list "-c" (print "echo " $gkms_omnibus_secrets_base64 "| base64 -d | jq -j '.\"omnibus-gitlab\".gitlab_rb.\"gitlab-rails\".redis_password'")) | quote }}
       - apiVersion: v1
         kind: Secret
         metadata:
           name: gitlab-smtp-credential
-          namespace: gitlab
+          namespace: {{ .Environment.Values | getOrNil "gitlab_secrets_namespace" | default "gitlab" }}
         stringData:
           secret: {{ exec "bash" (list "-c" (print "echo " $gkms_omnibus_secrets_base64 "| base64 -d | jq -j '.\"omnibus-gitlab\".gitlab_rb.\"gitlab-rails\".smtp_password'")) | quote }}
       - apiVersion: v1
         kind: Secret
         metadata:
           name: gitlab-workhorse-credential
-          namespace: gitlab
+          namespace: {{ .Environment.Values | getOrNil "gitlab_secrets_namespace" | default "gitlab" }}
         stringData:
           secret: {{ exec "bash" (list "-c" (print "echo " $gkms_omnibus_secrets_base64 "| base64 -d | jq -j '.\"omnibus-gitlab\".gitlab_rb.\"gitlab-workhorse\".secret_token'")) | quote }}
       - apiVersion: v1
         kind: Secret
         metadata:
           name: gitlab-gitaly-credential
-          namespace: gitlab
+          namespace: {{ .Environment.Values | getOrNil "gitlab_secrets_namespace" | default "gitlab" }}
         stringData:
           secret: {{ exec "bash" (list "-c" (print "echo " $gkms_omnibus_secrets_base64 "| base64 -d | jq -j '.\"omnibus-gitlab\".gitlab_rb.\"gitlab-rails\".gitaly_token'")) | quote }}
       - apiVersion: v1
         kind: Secret
         metadata:
           name: gitlab-rails-secret
-          namespace: gitlab
+          namespace: {{ .Environment.Values | getOrNil "gitlab_secrets_namespace" | default "gitlab" }}
         stringData:
           secrets.yml: |
             production:
@@ -135,6 +136,6 @@ releases:
         kind: Secret
         metadata:
           name: gitlab-mailroom-imap
-          namespace: gitlab
+          namespace: {{ .Environment.Values | getOrNil "gitlab_secrets_namespace" | default "gitlab" }}
         stringData:
           password: {{ exec "bash" (list "-c" (print "echo " $gkms_omnibus_secrets_base64 "| base64 -d | jq -j '.\"omnibus-gitlab\".gitlab_rb.\"gitlab-rails\".incoming_email_password'")) }}
