--- a/bases/environments.yaml
+++ b/bases/environments.yaml
@@ -16,6 +16,9 @@ environments:
     values:
       - google_project: "gitlab-production"
       - gitlab_endpoint: "https://gitlab.com"
+      - gitlab_secrets_gkms_source: "gprd"
+      - gitlab_secrets_release_name: "gitlab-secrets-cny"
+      - gitlab_secrets_namespace: "gitlab-cny"
   gprd:
     values:
       - google_project: "gitlab-production"
