rename our secrets such that we do not attempt to override our existing items

--- a/releases/gitlab-secrets.yaml
+++ b/releases/gitlab-secrets.yaml
@@ -24,7 +24,7 @@ releases:
         kind: Secret
         type: kubernetes.io/dockerconfigjson
         metadata:
-          name: dev-registry-access
+          name: dev-registry-access-v1
           namespace: {{ .Environment.Values | getOrNil "gitlab_secrets_namespace" | default "gitlab" }}
         stringData:
           .dockerconfigjson: |
@@ -32,7 +32,7 @@ releases:
       - apiVersion: v1
         kind: Secret
         metadata:
-          name: gitlab-object-storage
+          name: gitlab-object-storage-v1
           namespace: {{ .Environment.Values | getOrNil "gitlab_secrets_namespace" | default "gitlab" }}
         stringData:
           gitlab-object-storage.yml: |
@@ -43,7 +43,7 @@ releases:
       - apiVersion: v1
         kind: Secret
         metadata:
-          name: gitlab-google-oauth2
+          name: gitlab-google-oauth2-v1
           namespace: {{ .Environment.Values | getOrNil "gitlab_secrets_namespace" | default "gitlab" }}
         stringData:
           provider:
@@ -51,7 +51,7 @@ releases:
       - apiVersion: v1
         kind: Secret
         metadata:
-          name: registry-certificate
+          name: registry-certificate-v1
           namespace: {{ .Environment.Values | getOrNil "gitlab_secrets_namespace" | default "gitlab" }}
         stringData:
           registry-auth.crt: |
@@ -61,7 +61,7 @@ releases:
       - apiVersion: v1
         kind: Secret
         metadata:
-          name: registry-storage
+          name: registry-storage-v1
           namespace: {{ .Environment.Values | getOrNil "gitlab_secrets_namespace" | default "gitlab" }}
         stringData:
           config: |
@@ -80,49 +80,49 @@ releases:
       - apiVersion: v1
         kind: Secret
         metadata:
-          name: registry-httpsecret
+          name: registry-httpsecret-v1
           namespace: {{ .Environment.Values | getOrNil "gitlab_secrets_namespace" | default "gitlab" }}
         stringData:
           secret: {{ exec "bash" (list "-c" (print "echo " $gkms_omnibus_secrets_base64 "| base64 -d | jq -j '.\"omnibus-gitlab\".gitlab_rb.registry.http_secret'")) | quote }}
       - apiVersion: v1
         kind: Secret
         metadata:
-          name: gitlab-postgres-credential
+          name: gitlab-postgres-credential-v1
           namespace: {{ .Environment.Values | getOrNil "gitlab_secrets_namespace" | default "gitlab" }}
         stringData:
           secret: {{ exec "bash" (list "-c" (print "echo " $gkms_omnibus_secrets_base64 "| base64 -d | jq -j '.\"omnibus-gitlab\".gitlab_rb.\"gitlab-rails\".db_password'")) | quote }}
       - apiVersion: v1
         kind: Secret
         metadata:
-          name: gitlab-redis-credential
+          name: gitlab-redis-credential-v1
           namespace: {{ .Environment.Values | getOrNil "gitlab_secrets_namespace" | default "gitlab" }}
         stringData:
           secret: {{ exec "bash" (list "-c" (print "echo " $gkms_omnibus_secrets_base64 "| base64 -d | jq -j '.\"omnibus-gitlab\".gitlab_rb.\"gitlab-rails\".redis_password'")) | quote }}
       - apiVersion: v1
         kind: Secret
         metadata:
-          name: gitlab-smtp-credential
+          name: gitlab-smtp-credential-v1
           namespace: {{ .Environment.Values | getOrNil "gitlab_secrets_namespace" | default "gitlab" }}
         stringData:
           secret: {{ exec "bash" (list "-c" (print "echo " $gkms_omnibus_secrets_base64 "| base64 -d | jq -j '.\"omnibus-gitlab\".gitlab_rb.\"gitlab-rails\".smtp_password'")) | quote }}
       - apiVersion: v1
         kind: Secret
         metadata:
-          name: gitlab-workhorse-credential
+          name: gitlab-workhorse-credential-v1
           namespace: {{ .Environment.Values | getOrNil "gitlab_secrets_namespace" | default "gitlab" }}
         stringData:
           secret: {{ exec "bash" (list "-c" (print "echo " $gkms_omnibus_secrets_base64 "| base64 -d | jq -j '.\"omnibus-gitlab\".gitlab_rb.\"gitlab-workhorse\".secret_token'")) | quote }}
       - apiVersion: v1
         kind: Secret
         metadata:
-          name: gitlab-gitaly-credential
+          name: gitlab-gitaly-credential-v1
           namespace: {{ .Environment.Values | getOrNil "gitlab_secrets_namespace" | default "gitlab" }}
         stringData:
           secret: {{ exec "bash" (list "-c" (print "echo " $gkms_omnibus_secrets_base64 "| base64 -d | jq -j '.\"omnibus-gitlab\".gitlab_rb.\"gitlab-rails\".gitaly_token'")) | quote }}
       - apiVersion: v1
         kind: Secret
         metadata:
-          name: gitlab-rails-secret
+          name: gitlab-rails-secret-v1
           namespace: {{ .Environment.Values | getOrNil "gitlab_secrets_namespace" | default "gitlab" }}
         stringData:
           secrets.yml: |
@@ -135,7 +135,7 @@ releases:
       - apiVersion: v1
         kind: Secret
         metadata:
-          name: gitlab-mailroom-imap
+          name: gitlab-mailroom-imap-v1
           namespace: {{ .Environment.Values | getOrNil "gitlab_secrets_namespace" | default "gitlab" }}
         stringData:
           password: {{ exec "bash" (list "-c" (print "echo " $gkms_omnibus_secrets_base64 "| base64 -d | jq -j '.\"omnibus-gitlab\".gitlab_rb.\"gitlab-rails\".incoming_email_password'")) }}
