--- a/gstg.yaml
+++ b/gstg.yaml
@@ -127,6 +127,7 @@ global:
     database: gitlabhq_production_sidekiq
     host: pgbouncer-sidekiq.int.gstg.gitlab.net
     port: 6432
+    prepared_statements: false
 
   redis:
     host: "gstg-redis-sidekiq"
