--- a/values.yaml
+++ b/values.yaml
@@ -522,6 +522,8 @@ gitlab:
     metrics:
       enabled: true
       port: 8083
+    logging:
+      format: "json"
     networkpolicy:
       enabled: true
       egress:
