Reconfigures helm chart to use helmfile created secrets
* With the introduction of helmfile and the installation of secrets via
`SHA HERE`, let's reconfigure our helm chart to utilize these new
secrets
* This will force all kubernetes objects to start using the new secrets
* We'll take care of cleanup after validation has been completed

--- a/gstg.yaml
+++ b/gstg.yaml
@@ -40,7 +40,7 @@ global:
       enabled: true
       blockAutoCreatedUsers: false
       providers:
-        - secret: gitlab-google-oauth2
+        - secret: gitlab-google-oauth2-v1
           key: provider
   email:
     from: gitlab@mg.gitlab.com
@@ -145,6 +145,6 @@ global:
     enabled: true
     password:
       key: secret
-      secret: gitlab-smtp-credential
+      secret: gitlab-smtp-credential-v1
     starttls_auto: true
     user_name: postmaster@mg.staging.gitlab.com
