--- a/values.yaml
+++ b/values.yaml
@@ -241,8 +241,8 @@ global:
   ## Rails application secrets
   ## Secret created according to doc/installation/secrets.md#gitlab-rails-secret
   ## If allowing shared-secrets generation, this is OPTIONAL.
-  railsSecrets: {}
-    # secret:
+  railsSecrets:
+    secret: gitlab-rails-secret-v1
 
   ## doc/charts/globals.md#configure-registry-settings
   registry:
