--- a/bases/environments.yaml
+++ b/bases/environments.yaml
@@ -8,10 +8,12 @@ environments:
     values:
       - google_project: "gitlab-pre"
       - gitlab_endpoint: "https://pre.gitlab.com"
+      - registry_bucket_name: "gitlab-{{ .Environment.Name }}-registry"
   gstg:
     values:
       - google_project: "gitlab-staging-1"
       - gitlab_endpoint: "https://staging.gitlab.com"
+      - registry_bucket_name: "gitlab-{{ .Environment.Name }}-registry"
   cny:
     values:
       - google_project: "gitlab-production"
@@ -19,7 +21,10 @@ environments:
       - gitlab_secrets_gkms_source: "gprd"
       - gitlab_secrets_release_name: "gitlab-secrets-cny"
       - gitlab_secrets_namespace: "gitlab-cny"
+      # Canary uses the same bucket as production
+      - registry_bucket_name: "gitlab-gprd-registry"
   gprd:
     values:
       - google_project: "gitlab-production"
       - gitlab_endpoint: "https://gitlab.com"
+      - registry_bucket_name: "gitlab-{{ .Environment.Name }}-registry"
