--- a/releases/gitlab-secrets.yaml
+++ b/releases/gitlab-secrets.yaml
@@ -66,7 +66,7 @@ releases:
         stringData:
           config: |
             gcs:
-              bucket: gitlab-{{ .Environment.Name }}-registry
+              bucket: {{ .Environment.Values.registry_bucket_name }}
               keyfile: /etc/docker/registry/storage/gcs.json
             maintenance:
               uploadpurging:
