Decreases chance of misconfiguration being missed by helm
* The Container Registry, if misconfigured, may come up to a Ready state
at first, and will later transition to being unhealthy
* The increase in the readiness initialDelay to 40 seconds is utilized
as a buffer to help prevent misconfigurations from allowing Kubernetes
to see a Ready state until after **SOME** threshold where the Container
Registry completes it's start up
  * The value of 40 was chosen after testing
  * A value less than 40 allowed a misconfiguration to pass through the
  cracks allowing the registry come online prematurely

--- a/values.yaml
+++ b/values.yaml
@@ -432,6 +432,8 @@ registry:
     readinessProbe:
       path: /debug/health
       port: 5001
+      # TODO: Consider removal after https://gitlab.com/gitlab-org/container-registry/issues/37
+      initialDelaySeconds: 40
     livenessProbe:
       path: /debug/health
       port: 5001
