Configures k-ctl to utilize helmfile
* Modifies the installation of helm charts to be more simplified
  * We check to see if we can reach out to various endpoints, which
  helps determine which mode of install we'll utilize
  * if we can't hit our pages endpoint, for example, we'll move onward
  to pulling directly from S3, and so forth
* Modifies our git installation, such that we utilize helm's native
features to pull, build, and place in the local repo
  * This enables helm diff to work properly when pulling from our git
  repository
* k-ctl will setup the appropriate env variables which helps inform
helmfile on where the repo is located
  * this removes the need for the s3 and git helm plugins
  * when using gitlab's helm repo - we set the gitlab repo to our FQDN
  * when using s3 - we'll use the s3 endpoint for the bucket
  * when using git, we'll create the package, and utilize the local helm
  repo
* Removes various options that can now be set via helmfile from the
k-ctl script
  * primarily the annotations required for the GitLab Environments
  feature
* Removes various helm options as these are replaced by helmfile
configurations
* Adds a helmfile configuration that matches the defaults that were
utilized in k-ctl
* Moves our values and environment files for better organization
* This enables k-ctl to manage both the installation of our secrets as
well as the gitlab helm chart in one fell swoop
  * Which enables us to remove many duplicated dry-runs
* Removes checking for secrets since this is now managed by our
integrated gitlab-secrets helm chart in this repo
* Removes the detailed-exitcode since a helmfile diff will only process
one chart at a time
  * The output is more detailed and concise than helm so it's more clear
  and I don't believe we need to rely on the exit code any longer
* Adds env variable LOG_LEVEL, which will passed directly into helmfile,
with a default matching that of helmfile's native default: `info`

--- a/bases/environments.yaml
+++ b/bases/environments.yaml
@@ -8,17 +8,16 @@ environments:
     values:
       - google_project: "gitlab-pre"
       - gitlab_endpoint: "https://pre.gitlab.com"
-      - registry_bucket_name: "gitlab-{{ .Environment.Name }}-registry"
   gstg:
     values:
       - google_project: "gitlab-staging-1"
       - gitlab_endpoint: "https://staging.gitlab.com"
-      - registry_bucket_name: "gitlab-{{ .Environment.Name }}-registry"
-  cny:
+  gprd-cny:
     values:
       - google_project: "gitlab-production"
       - gitlab_endpoint: "https://gitlab.com"
       - gitlab_secrets_gkms_source: "gprd"
+      - gitlab_release_name: "gitlab-cny"
       - gitlab_secrets_release_name: "gitlab-secrets-cny"
       - gitlab_secrets_namespace: "gitlab-cny"
       # Canary uses the same bucket as production
@@ -27,4 +26,3 @@ environments:
     values:
       - google_project: "gitlab-production"
       - gitlab_endpoint: "https://gitlab.com"
-      - registry_bucket_name: "gitlab-{{ .Environment.Name }}-registry"
