--- a/releases/gitlab-secrets.yaml
+++ b/releases/gitlab-secrets.yaml
@@ -66,7 +66,7 @@ releases:
         stringData:
           config: |
             gcs:
-              bucket: {{ .Environment.Values.registry_bucket_name }}
+              bucket: {{ .Environment.Values | getOrNil "registry_bucket_name" | default (printf "gitlab-%s-registry" .Environment.Name) }}
               keyfile: /etc/docker/registry/storage/gcs.json
             maintenance:
               uploadpurging:
