Allows git installs/diffs to work as-is
* When one specifies a chart version that is not semver complaint,
example:
  * v3.1.0
  * jarv/3-0-stable-json
* This chart will clone the git repo and perform a package and build and
upload the chart to the local helm repo
* From this point, we enable helms local repository and proceed through
an install as if it were a normal release
* The packaging step contains a requirement that we supply a semver
version
  * For this we pluck the version from GitLab's helm chart on that `ref`
  and append the actual `ref` we are operating on
* Doing this, requires us to swap where our respository is located since
we are uploading it to local helm, so therefore, we change the reference
to our git repo, instead to the loopback address where helm will be
running

--- a/releases/gitlab.yaml
+++ b/releases/gitlab.yaml
@@ -15,7 +15,7 @@ repositories:
   url: https://gitlab-charts.s3.amazonaws.com/
 {{- else if eq $chart_source "gitlab-git/gitlab" }}
 - name: gitlab-git
-  url: {{ (printf "git+https://gitlab.com/gitlab-org/charts/gitlab@?ref=%s&sparse=0" $chart_version) }}
+  url: http://127.0.0.1:8879/charts
 {{- end }}
 
 releases:
