Make gitlab-secrets namespace settings more DRY
As part of https://gitlab.com/gitlab-com/gl-infra/delivery/issues/699
it was identified that the gitlab-secrets chart is very hard to read.

This is a small fix to start cleaning it up.

--- a/releases/gitlab-secrets.yaml
+++ b/releases/gitlab-secrets.yaml
@@ -4,6 +4,7 @@ bases:
   - "../bases/environments.yaml"
 
 ---
+{{ $namespace := .Environment.Values | getOrNil "gitlab_secrets_namespace" | default "gitlab" }}
 repositories:
 # Kubernetes incubator repo of helm charts
 - name: "kubernetes-incubator"
@@ -12,7 +13,7 @@ repositories:
 releases:
 - name:  {{ .Environment.Values | getOrNil "gitlab_secrets_release_name" | default "gitlab-secrets" }}
   chart: "kubernetes-incubator/raw"
-  namespace: {{ .Environment.Values | getOrNil "gitlab_secrets_namespace" | default "gitlab" }}
+  namespace: {{ $namespace }}
   version: "0.2.3"
   installed: {{ env "GITLAB_SECRETS_INSTALLED" | default "true" }}
   values:
@@ -25,7 +26,7 @@ releases:
         type: kubernetes.io/dockerconfigjson
         metadata:
           name: dev-registry-access-v1
-          namespace: {{ .Environment.Values | getOrNil "gitlab_secrets_namespace" | default "gitlab" }}
+          namespace: {{ $namespace }}
         stringData:
           .dockerconfigjson: |
             {"auths":{"dev.gitlab.org:5005":{"username":"k8s-workloads-deploy-token","password":{{ $dev_gitlab_org_docker_pass | quote }},"auth":{{ (list "k8s-workloads-deploy-token:" $dev_gitlab_org_docker_pass) | join "" | b64enc | quote }}}}}
@@ -33,7 +34,7 @@ releases:
         kind: Secret
         metadata:
           name: gitlab-object-storage-v1
-          namespace: {{ .Environment.Values | getOrNil "gitlab_secrets_namespace" | default "gitlab" }}
+          namespace: {{ $namespace }}
         stringData:
           gitlab-object-storage.yml: |
               provider: Google
@@ -44,7 +45,7 @@ releases:
         kind: Secret
         metadata:
           name: gitlab-google-oauth2-v1
-          namespace: {{ .Environment.Values | getOrNil "gitlab_secrets_namespace" | default "gitlab" }}
+          namespace: {{ $namespace }}
         stringData:
           provider:
 {{ exec "bash" (list "-c" (print "echo " $gkms_omnibus_secrets_base64 "| base64 -d | jq -jc '.\"omnibus-gitlab\".gitlab_rb.\"gitlab-rails\".omniauth_providers[0]'")) | quote | indent 14 }}
@@ -52,7 +53,7 @@ releases:
         kind: Secret
         metadata:
           name: registry-certificate-v1
-          namespace: {{ .Environment.Values | getOrNil "gitlab_secrets_namespace" | default "gitlab" }}
+          namespace: {{ $namespace }}
         stringData:
           registry-auth.crt: |
 {{ exec "bash" (list "-c" (print "echo " $gkms_omnibus_secrets_base64 "| base64 -d | jq -r '.\"omnibus-gitlab\".gitlab_rb.registry.internal_certificate'")) | indent 14 }}
@@ -62,7 +63,7 @@ releases:
         kind: Secret
         metadata:
           name: registry-storage-v1
-          namespace: {{ .Environment.Values | getOrNil "gitlab_secrets_namespace" | default "gitlab" }}
+          namespace: {{ $namespace }}
         stringData:
           config: |
             gcs:
@@ -81,49 +82,49 @@ releases:
         kind: Secret
         metadata:
           name: registry-httpsecret-v1
-          namespace: {{ .Environment.Values | getOrNil "gitlab_secrets_namespace" | default "gitlab" }}
+          namespace: {{ $namespace }}
         stringData:
           secret: {{ exec "bash" (list "-c" (print "echo " $gkms_omnibus_secrets_base64 "| base64 -d | jq -j '.\"omnibus-gitlab\".gitlab_rb.registry.http_secret'")) | quote }}
       - apiVersion: v1
         kind: Secret
         metadata:
           name: gitlab-postgres-credential-v1
-          namespace: {{ .Environment.Values | getOrNil "gitlab_secrets_namespace" | default "gitlab" }}
+          namespace: {{ $namespace }}
         stringData:
           secret: {{ exec "bash" (list "-c" (print "echo " $gkms_omnibus_secrets_base64 "| base64 -d | jq -j '.\"omnibus-gitlab\".gitlab_rb.\"gitlab-rails\".db_password'")) | quote }}
       - apiVersion: v1
         kind: Secret
         metadata:
           name: gitlab-redis-credential-v1
-          namespace: {{ .Environment.Values | getOrNil "gitlab_secrets_namespace" | default "gitlab" }}
+          namespace: {{ $namespace }}
         stringData:
           secret: {{ exec "bash" (list "-c" (print "echo " $gkms_omnibus_secrets_base64 "| base64 -d | jq -j '.\"omnibus-gitlab\".gitlab_rb.\"gitlab-rails\".redis_password'")) | quote }}
       - apiVersion: v1
         kind: Secret
         metadata:
           name: gitlab-smtp-credential-v1
-          namespace: {{ .Environment.Values | getOrNil "gitlab_secrets_namespace" | default "gitlab" }}
+          namespace: {{ $namespace }}
         stringData:
           secret: {{ exec "bash" (list "-c" (print "echo " $gkms_omnibus_secrets_base64 "| base64 -d | jq -j '.\"omnibus-gitlab\".gitlab_rb.\"gitlab-rails\".smtp_password'")) | quote }}
       - apiVersion: v1
         kind: Secret
         metadata:
           name: gitlab-workhorse-credential-v1
-          namespace: {{ .Environment.Values | getOrNil "gitlab_secrets_namespace" | default "gitlab" }}
+          namespace: {{ $namespace }}
         stringData:
           secret: {{ exec "bash" (list "-c" (print "echo " $gkms_omnibus_secrets_base64 "| base64 -d | jq -j '.\"omnibus-gitlab\".gitlab_rb.\"gitlab-workhorse\".secret_token'")) | quote }}
       - apiVersion: v1
         kind: Secret
         metadata:
           name: gitlab-gitaly-credential-v1
-          namespace: {{ .Environment.Values | getOrNil "gitlab_secrets_namespace" | default "gitlab" }}
+          namespace: {{ $namespace }}
         stringData:
           secret: {{ exec "bash" (list "-c" (print "echo " $gkms_omnibus_secrets_base64 "| base64 -d | jq -j '.\"omnibus-gitlab\".gitlab_rb.\"gitlab-rails\".gitaly_token'")) | quote }}
       - apiVersion: v1
         kind: Secret
         metadata:
           name: gitlab-rails-secret-v1
-          namespace: {{ .Environment.Values | getOrNil "gitlab_secrets_namespace" | default "gitlab" }}
+          namespace: {{ $namespace }}
         stringData:
           secrets.yml: |
             production:
@@ -136,6 +137,6 @@ releases:
         kind: Secret
         metadata:
           name: gitlab-mailroom-imap-v1
-          namespace: {{ .Environment.Values | getOrNil "gitlab_secrets_namespace" | default "gitlab" }}
+          namespace: {{ $namespace }}
         stringData:
           password: {{ exec "bash" (list "-c" (print "echo " $gkms_omnibus_secrets_base64 "| base64 -d | jq -j '.\"omnibus-gitlab\".gitlab_rb.\"gitlab-rails\".incoming_email_password'")) }}
